--- a/src/orions-galaxy/style.styl
+++ b/src/orions-galaxy/style.styl
@@ -3,8 +3,37 @@
 
 :root
   --aspect-ratio calc(5246.15/7462.26)
-  --height 30
+  --height 40
   --width calc(var(--height) * var(--aspect-ratio))
+  --stroke hsl(0, 0%, 10%)
+  --orion-light hsl(40, 80%, 50%)
+  --orion hsl(40, 80%, 40%)
+  --orion-dark hsl(40, 80%, 30%)
+  --orion-stroke hsl(40, 80%, 20%)
+  --collar hsl(0, 60%, 50%)
+  --nose hsl(10, 80%, 80%)
+  --white hsl(0, 0%, 99%)
+  --space-backdrop hsl(280, 80%, 30%)
+  --space-blob hsl(280, 50%, 15%)
+  --belt hsl(45, 80%, 50%)
+  --belt-light hsl(45, 90%, 80%)
+  --shimmer hsla(0, 0%, 100%, 0.95)
+  --turtle hsl(90, 60%, 40%)
+  --turtle-light hsl(90, 60%, 60%)
+  --turtle-dark hsl(90, 60%, 20%)
+  --turtle-darker hsl(90, 60%, 15%)
+  --turtle-darkest hsl(90, 60%, 10%)
+  --socket hsl(30, 80%, 50%)
+  --turtle-shell hsl(40, 60%, 20%)
+  --turtle-shell-light hsl(40, 50%, 50%)
+  --turtle-shell-groove hsl(30, 40%, 15%)
+  --turtle-shell-lip hsl(40, 80%, 50%)
+  --turtle-under-shell hsl(40, 40%, 30%)
+  --tank-shine hsl(0, 0%, 80%)
+  --tank-body hsl(0, 0%, 40%)
+  --tank-end hsl(0, 0%, 60%)
+  --helmet-collar hsl(0, 0%, 40%)
+  --helmet-glass hsl(180, 80%, 80%)
 
 body
   min-height 100vh
@@ -12,15 +41,109 @@ body
   align-items center
   justify-content center
   overflow hidden
+  background hsl(180, 80%, 98%)
+
+.space
+  fill var(--space-backdrop)
+
+.space-blob
+  fill var(--space-blob)
+
+.shimmer-stroke
+  stroke var(--shimmer)
+
+.helmet
+  &__glass
+    fill var(--helmet-glass)
+  &__collar
+    stroke var(--helmet-collar)
+
+.tank
+  &__shine
+    fill var(--tank-shine)
+  &__body
+    fill var(--tank-body)
+  &__end
+    fill var(--tank-end)
+  &__socket
+    fill var(--socket)
+
+.blob
+  fill 'hsl(280, 80%, %s)' % calc(var(--lightness, 50) * 1%)
+.star
+  fill 'hsl(45, 80%, %s)' % calc(var(--lightness, 50) * 1%)
+
+.belt
+  &--fill
+    fill var(--belt)
+  &--stroke
+    stroke var(--belt)
+  &--fill-light
+    fill var(--belt-light)
+  &--stroke-light
+    stroke var(--belt-light)
+
+.stroke
+  stroke var(--stroke)
 
 .orion
   height calc(var(--height) * 1vmin)
   width calc(var(--width) * 1vmin)
+  opacity 0
+
+  &__eye
+    fill var(--stroke)
+
+  &__nose
+    fill var(--nose)
+
+  &__muzzle
+    fill var(--white)
+
+  &__collar
+    stroke var(--collar)
+
+  &--light
+    fill var(--orion-light)
+
+  &--medium
+    fill var(--orion)
+
+  &--dark
+    fill var(--orion-dark)
+
+  &--stroke
+    stroke var(--orion-stroke)
 
 .turtle
   height 50vmin
-  // opacity 0.25
   position fixed
   top 50%
   left 50%
-  transform translate(-50%, -50%)
+
+  &__shell
+    fill var(--turtle-shell)
+
+  &__shell-light
+    fill var(--turtle-shell-light)
+
+  &__under-shell
+    fill var(--turtle-under-shell)
+
+  &__shell-lip
+    stroke var(--turtle-shell-lip)
+
+  &__shell-groove
+    stroke var(--turtle-shell-groove)
+
+  &__flipper
+    path:nth-of-type(1)
+      fill var(--turtle-light)
+    path:nth-of-type(2)
+      fill var(--turtle-dark)
+
+    &--back
+      path:nth-of-type(1)
+        fill var(--turtle-darker)
+      path:nth-of-type(2)
+        fill var(--turtle-darkest)
