--- a/src/orions-galaxy/style.styl
+++ b/src/orions-galaxy/style.styl
@@ -6,15 +6,15 @@
   --height 40
   --width calc(var(--height) * var(--aspect-ratio))
   --stroke hsl(0, 0%, 10%)
-  --orion-light hsl(40, 80%, 50%)
-  --orion hsl(40, 80%, 40%)
-  --orion-dark hsl(40, 80%, 30%)
+  --orion-light hsl(25, 90%, 70%)
+  --orion hsl(30, 75%, 50%)
+  --orion-dark hsl(28, 67%, 49%)
   --orion-stroke hsl(40, 80%, 20%)
   --collar hsl(0, 60%, 50%)
   --nose hsl(10, 80%, 80%)
   --white hsl(0, 0%, 99%)
-  --space-backdrop hsl(280, 80%, 30%)
-  --space-blob hsl(280, 50%, 15%)
+  --space-blob hsl(280, 80%, 30%)
+  --space-backdrop hsl(280, 50%, 15%)
   --belt hsl(45, 80%, 50%)
   --belt-light hsl(45, 90%, 80%)
   --shimmer hsla(0, 0%, 100%, 0.95)
@@ -23,15 +23,16 @@
   --turtle-dark hsl(90, 60%, 20%)
   --turtle-darker hsl(90, 60%, 15%)
   --turtle-darkest hsl(90, 60%, 10%)
-  --socket hsl(30, 80%, 50%)
-  --turtle-shell hsl(40, 60%, 20%)
-  --turtle-shell-light hsl(40, 50%, 50%)
-  --turtle-shell-groove hsl(30, 40%, 15%)
-  --turtle-shell-lip hsl(40, 80%, 50%)
-  --turtle-under-shell hsl(40, 40%, 30%)
+  --socket hsl(210, 80%, 80%)
+  --turtle-shell hsl(28, 68%, 21%)
+  --turtle-shell-light hsl(28, 70%, 80%)
+  --turtle-shell-groove hsl(28, 66%, 15%)
+  --turtle-shell-lip hsl(45, 80%, 50%)
+  --turtle-under-shell hsl(45, 80%, 30%)
   --tank-shine hsl(0, 0%, 80%)
   --tank-body hsl(0, 0%, 40%)
   --tank-end hsl(0, 0%, 60%)
+  --tank-cable hsl(0, 80%, 70%)
   --helmet-collar hsl(0, 0%, 40%)
   --helmet-glass hsl(180, 80%, 80%)
 
@@ -67,6 +68,8 @@ body
     fill var(--tank-end)
   &__socket
     fill var(--socket)
+  &__cable
+    stroke var(--tank-cable)
 
 .blob
   fill 'hsl(280, 80%, %s)' % calc(var(--lightness, 50) * 1%)
@@ -121,6 +124,12 @@ body
   top 50%
   left 50%
 
+  &__eye
+    fill var(--stroke)
+
+  &__mouth
+    fill var(--turtle-dark)
+
   &__shell
     fill var(--turtle-shell)
 
@@ -147,3 +156,46 @@ body
         fill var(--turtle-darker)
       path:nth-of-type(2)
         fill var(--turtle-darkest)
+
+
+label
+  height 44px
+  width 44px
+  position fixed
+  bottom 1rem
+  right 1rem
+  cursor pointer
+
+  & > svg
+    position absolute
+    height 100%
+    width 100%
+    top 0
+    left 0
+
+  path
+    fill hsl(180, 40%, 80%)
+
+  svg:nth-of-type(1)
+    display none
+
+[type='checkbox']
+  // opacity 0
+  height 0
+  width 0
+
+:checked ~ label
+  svg:nth-of-type(1)
+    display block
+  svg:nth-of-type(2)
+    display none
+
+h1
+  font-family sans-serif
+  font-size 4rem
+  position fixed
+  bottom 1rem
+  left 1rem
+  margin 0
+  color hsl(180, 40%, 80%)
+  z-index -1
