--- a/src/100-divs-confetti/dev.pug
+++ b/src/100-divs-confetti/dev.pug
@@ -1,9 +1,9 @@
 .scene
   .plane
     .confetti__container
+      .confetti__gun
       - let c = 0
-      while c < 20
-        .confetti__wrapper
-          .confetti
-            .confetti__content
+      while c < 48
+        .confetti
+          .confetti__content
         - c++
