--- a/src/100-divs-confetti/style.styl
+++ b/src/100-divs-confetti/style.styl
@@ -30,6 +30,7 @@ body
   height calc(var(--height, 1) * 1vmin)
   width calc(var(--width, 1) * 1vmin)
   transform rotate(-60deg)
+  border-radius calc(var(--radius, 0) * 1%)
 
 .confetti
   transform-origin 0 50%
@@ -63,7 +64,7 @@ body
     position absolute
     height 150%
     width 100%
-    background linear-gradient(-72deg, transparent 32%, hsla(0, 0%, 100%, 0.45) 40%, transparent 50%), hsl(35deg, 93%, 56%)
+    background linear-gradient(-72deg, transparent 32%, hsla(0, 0%, 100%, 0.45) 40%, transparent 50%), linear-gradient(transparent 30%, hsl(280, 90%, 90%) 30% 40%, transparent 40% 60%, hsl(280, 90%, 90%) 60% 70%, transparent 70%), hsl(35deg, 93%, 56%)
     top 50%
     transform-origin 50% 0%
     transform rotateX(-90deg) rotateY(60deg) translate(0%, 0)
