--- a/src/xbox-series-s/index.pug
+++ b/src/xbox-series-s/index.pug
@@ -1,3 +1,4 @@
 extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js")
