--- a/src/xbox-series-s/style.styl
+++ b/src/xbox-series-s/style.styl
@@ -2,18 +2,21 @@
   box-sizing border-box
 
 :root
-  --perspective 800
-  --rotate-x -24
-  --rotate-y -55
-  --xbox-scale 2.5
+  --perspective 1200
+  --rotate-x -15
+  --rotate-y -40
+  --xbox-scale 4
   --xbox-width calc(5.9 * var(--xbox-scale))
   --xbox-height calc(2.5 * var(--xbox-scale))
   --xbox-depth calc(10.8 * var(--xbox-scale))
   --plane-width var(--xbox-width)
   --plane-height var(--xbox-depth)
+  --transition .1s
+  --power 0
 
 body
   min-height 100vh
+  // overflow hidden
   background hsl(158, 40%, 41%)
 
 .scene
@@ -26,7 +29,6 @@ body
   justify-content center
 
 .plane
-  background hsla(0, 80%, 50%, 0.25)
   height calc(var(--plane-height, 25) * 1vmin)
   width calc(var(--plane-width, 25) * 1vmin)
   transform-style preserve-3d
@@ -40,9 +42,12 @@ body
   --depth var(--cuboid-depth, 4)
   height calc(var(--depth) * 1vmin)
   width calc(var(--width) * 1vmin)
-  transform-style preserve-3d
   position absolute
   transform translate3d(calc(var(--x, 0) * 1vmin), calc(var(--y, 0) * 1vmin), calc(var(--z, 0) * 1vmin)) rotateX(calc(var(--rotate-cuboid-x, 0) * 1deg)) rotateY(calc(var(--rotate-cuboid-y, 0) * 1deg)) rotateZ(calc(var(--rotate-cuboid-z, 0) * 1deg))
+  transform-style preserve-3d
+
+  &__side
+    transform-style preserve-3d
 
   & > div:nth-of-type(1)
     height calc(var(--height) * 1vmin)
@@ -104,22 +109,182 @@ body
   --depth var(--xbox-depth)
   --z calc(var(--xbox-height) * 0.5)
 
-  div
+  &.xbox--on
+    .xbox__sleep
+      display none
+    .xbox__mouth
+      animation wake-up-mouth 5s
+    .xbox__eye
+      animation wake-up 5s, eye-blink 5s 5s infinite
+
+    & > div:nth-of-type(3) .xbox__logo
+      animation-name blink
+      animation-iteration-count 8
+      animation-duration 1s
+      animation-fill-mode both
+      animation-timing-function steps(2, start)
+
+      @keyframes blink
+        to
+          fill white
+
+  &__face
+    height 20%
+    width 20%
+    left 50%
+    top 50%
+    position absolute
+    transform translate3d(-50%, -50%, 1px)
+    transform-style preserve-3d
+
+  &__mouth
+    height 2.5vmin
+    width 2.5vmin
+    border-radius 50%
+    background black
+    position absolute
+    bottom 0
+    left 50%
+    margin-left -1.25vmin
+    -webkit-clip-path inset(50% 0 0 0)
+    clip-path inset(50% 0 0 0)
+    overflow hidden
+    transform-origin 50% 75%
+    transform translate(0, 25%) scale(calc(0.1 + (var(--power) * 0.9)))
+
+    &:after
+      content ''
+      position absolute
+      bottom 0
+      right 0
+      height 50%
+      width 50%
+      background red
+      border-radius 50%
+      transform translate(0, 50%)
+
+  &__sleep
+    font-weight bold
+    font-family sans-serif
+    font-size 3rem
+    position absolute
+    left 100%
+    opacity 0.75
+    bottom 100%
+    color hsl(158, 40%, 20%)
+    transform-origin 0% 100%
+    transform scale(0) translate3d(0, 0, 0)
+    animation sleep calc(var(--s, 1) * 1s) calc(var(--d, 0) * 1s) infinite both
+
+    &--one
+      --x 200
+      --y -300
+      --d 0.2
+      --s 1
+    &--two
+      --x 150
+      --y -200
+      --d 0.4
+      --s 2
+    &--three
+      --x 250
+      --y -150
+      --d 0.6
+      --s 1.8
+
+  &__eye
+    height 1.75vmin
+    width 1.75vmin
+    background black
+    position absolute
+    top 0
+    border-radius 50%
+    transform scaleY(calc(0.1 + (var(--power) * 0.9)))
+
+    @keyframes eye-blink
+      0%, 49%, 51%, 100%
+        transform scaleY(1)
+      50%
+        transform scaleY(0.1)
+
+    &--left
+      left 0
+    &--right
+      right 0
+
+    &:after
+      content ''
+      position absolute
+      top 25%
+      left 25%
+      height 20%
+      width 20%
+      background white
+      border-radius 50%
+
+
+  & > div
     // Front facing end
     &:nth-of-type(1)
-      background hsl(0, 0%, 80%)
-    // Back facing end
     &:nth-of-type(2)
-      background hsl(0, 0%, 75%)
+      background hsl(0, 0%, 80%)
+
+      &:after
+        content ""
+        position absolute
+        background repeating-radial-gradient(hsl(0, 0%, 60%) 0 50%, transparent 50% 100%) 0 0 / 6px 6px, hsl(0, 0%, 80%)
+        width 90%
+        height 90%
+        left 5%
+        top 5%
     // Front panel
     &:nth-of-type(3)
       background hsl(0, 0%, 85%)
+
+      &:after
+        content ''
+        background hsl(0, 0%, 10%)
+        height 10%
+        width 5%
+        position absolute
+        bottom 15%
+        left 4%
+      &:before
+        content ''
+        background hsl(0, 0%, 10%)
+        height 0.5vmin
+        width 0.5vmin
+        border-radius 50%
+        bottom 15%
+        left 11%
+        position absolute
+
     // Back panel
     &:nth-of-type(4)
-      background hsl(0, 0%, 75%)
+      background hsl(0, 0%, 95%)
+
+      &:after
+        content ''
+        height 15%
+        bottom 15%
+        right 5%
+        position absolute
+        background repeating-linear-gradient(90deg, hsl(0, 0%, 50%) 0 90%, transparent 90% 100%) 0 0 / 20% 100%, transparent
+        width 55%
+
+      &:before
+        content ''
+        height 20%
+        bottom 35%
+        right 7%
+        position absolute
+        width 15%
+        background repeating-radial-gradient(hsl(0, 0%, 50%) 0 50%, transparent 50% 100%) 0 0 / 0.5vmin 0.5vmin, transparent
+
+
     // Top panel
     &:nth-of-type(5)
-      background hsl(0, 0%, 75%)
+      background hsl(0, 0%, 90%)
 
       &:after
         content ''
@@ -136,12 +301,150 @@ body
     &:nth-of-type(6)
       background hsl(0, 0%, 75%)
 
-  &__logo
+      &:after
+        content ""
+        position absolute
+        background repeating-radial-gradient(hsl(0, 0%, 35%) 0 50%, transparent 50% 100%) 0 0 / 0.5vmin 0.5vmin, hsl(0, 0%, 75%)
+        width 90%
+        height 15%
+        left 5%
+        top 5%
+
+  & > div:nth-of-type(5) .xbox__logo
+    position absolute
+    bottom 5%
+    left 5%
+    height 4%
+    transform rotate(-90deg)
+    fill hsl(0, 0%, 55%)
+
+  &__label
+    font-family sans-serif
+    bottom 9%
+    left 8.5%
+    font-size 0.5rem
+    position absolute
+    transform-origin 0 50%
+    transform rotate(-90deg)
+    color hsl(0, 0%, 55%)
+
+  & > div:nth-of-type(3) .xbox__logo
     height 100%
     position absolute
     right 5%
     top 10%
     height 20%
 
-    path
-      fill black
+  &__shadow
+    height 100%
+    width 100%
+    background radial-gradient(circle at 50% 50%, hsla(0, 0%, 0%, 0.5), transparent)
+    filter blur(5px)
+    position absolute
+    transition transform var(--transition), background var(--transition), filter var(--transition)
+
+  &__plane
+    height 100%
+    width 100%
+    transform-style preserve-3d
+    transform translate3d(0, 0, 0.5vmin)
+    transform-origin 50% 100%
+    transition transform var(--transition)
+
+  &__power
+    height 100%
+    width 100%
+    position absolute
+    z-index 2
+    border 0
+    cursor pointer
+    opacity 0
+
+  &__leg
+    --width 1
+    --depth 0.5
+    --height 0.25
+
+    transform translate3d(0, 0vmin, calc(var(--height) * 0.5vmin))
+
+    &:nth-of-type(1)
+      top 5%
+      left 5%
+    &:nth-of-type(2)
+      top 5%
+      right 5%
+    &:nth-of-type(3)
+      bottom 5%
+      left 5%
+    &:nth-of-type(4)
+      bottom 5%
+      right 5%
+    & > div
+      &:nth-of-type(1)
+        background hsl(0, 0%, 80%)
+      &:nth-of-type(2)
+        background hsl(0, 0%, 83%)
+      &:nth-of-type(3)
+        background hsl(0, 0%, 88%)
+      &:nth-of-type(4)
+        background hsl(0, 0%, 85%)
+      &:nth-of-type(5)
+        background hsl(0, 0%, 85%)
+      &:nth-of-type(6)
+        background hsl(0, 0%, 75%)
+
+label
+  position absolute
+  height 100%
+  width 100%
+  transform translate3d(0, 0, 1px)
+  cursor pointer
+  opacity 0
+
+.tilter--vertical
+  display none
+
+[type="checkbox"]
+  height 0
+  width 0
+  opacity 0
+  position fixed
+  left 100%
+
+:checked ~ .scene
+  .xbox__plane
+    transform rotateX(-90deg)
+  .tilter--vertical
+    display block
+  .xbox__shadow
+    transform-origin 50% 100%
+    transform scaleY(1.5)
+    background radial-gradient(circle at 50% 100%, hsla(0, 0%, 0%, 0.5), transparent 75%)
+    filter blur(15px)
+
+  .xbox__mouth
+    --start-scale 0.45
+    --scale 0.45
+    -webkit-clip-path inset(0 0 0 0)
+    clip-path inset(0 0 0 0)
+    transform translate(0, 25%) scale(0.45)
+
+    &:after
+      opacity 0
+
+@keyframes wake-up
+  0%, 57%, 75%, 77%, 83%
+    transform scaleY(0.1)
+  50%, 56%, 58%, 74%, 76%, 78%, 82%, 84%
+    transform scaleY(1)
+
+@keyframes wake-up-mouth
+  0%
+    transform translate(0, 25%) scale(var(--start-scale, 0.1))
+  50%, 100%
+    transform translate(0, 25%) scale(var(--scale, 1))
+
+
+@keyframes sleep
+  to
+    transform scale(1) translate3d(calc(var(--x, 100) * 1%), calc(var(--y, -250) * 1%), 0)
