--- a/src/3d-studio/style.styl
+++ b/src/3d-studio/style.styl
@@ -8,7 +8,7 @@
   --rotate-y -45
   --plane-height 50
   --plane-width 50
-  --scale 1.25
+  --scale 0.5
   --wall-thickness 4
   --one-cm calc((var(--plane-height) / 240))
   // Colors
@@ -24,15 +24,22 @@
   --wall-shade-four hsl(0, 0%, 85%)
   --skirting-one hsl(0, 0%, 93%)
   --skirting-two hsl(0, 0%, 88%)
-  --fade-one hsl(0, 80%, 90%)
-  --fade-two hsl(200, 80%, 90%)
-  --fade-three hsl(280, 80%, 90%)
-  --fade-four hsl(120, 80%, 90%)
+  --fade-one hsl(0, 80%, 85%)
+  --fade-two hsl(200, 80%, 85%)
+  --fade-three hsl(280, 80%, 85%)
+  --fade-four hsl(120, 80%, 85%)
   --leg-one hsl(0, 0%, 10%)
   --leg-two hsl(0, 0%, 12%)
   --leg-three hsl(0, 0%, 14%)
   --leg-four hsl(0, 0%, 16%)
   --rug hsl(210, 40%, 10%)
+  --peripheral-one hsl(0, 0%, 20%)
+  --peripheral-two hsl(0, 0%, 30%)
+  --peripheral-three hsl(0, 0%, 40%)
+  --peripheral-four hsl(0, 0%, 50%)
+  --mac-one hsl(0, 0%, 80%)
+  --mac-two hsl(0, 0%, 70%)
+  --mac-three hsl(0, 0%, 60%)
 
 // We're saying that 50vmin === 240cm
 
@@ -52,7 +59,7 @@ body
   transform scale(var(--scale))
 
 .plane
-  background hsla(180, 50%, 50%, 0.15)
+  // background hsla(180, 50%, 50%, 0.15)
   height calc(var(--plane-height, 25) * 1vmin)
   width calc(var(--plane-width, 25) * 1vmin)
   transform-style preserve-3d
@@ -238,6 +245,8 @@ body
       &:nth-of-type(2)
       &:nth-of-type(3)
         background var(--wall-shade-one)
+      &:nth-of-type(4)
+        background var(--wall-shade-two)
       &:nth-of-type(5)
         background var(--wall-shade-three)
 
@@ -247,13 +256,18 @@ body
   --width calc(114 * var(--one-cm))
   --z calc(100 * var(--one-cm) )
   --x calc(22 * var(--one-cm))
-  --y calc(var(--wall-thickness) * -1)
+  --y calc(var(--wall-thickness) * -0.8)
 
   div
     background var(--windowsill-shade-one)
 
     &:nth-of-type(1)
-      background var(--windowsill-shade-two)
+      filter brightness(0.5)
+      background url("https://images.pexels.com/photos/172276/pexels-photo-172276.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500")
+    &:nth-of-type(2)
+      background var(--wall-shade-one)
+    &:nth-of-type(5)
+      background url("https://images.pexels.com/photos/172276/pexels-photo-172276.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500")
     &:nth-of-type(6)
       background var(--windowsill-shade-three)
 
@@ -329,7 +343,7 @@ body
       left 4%
       height 100%
       width 100%
-      filter blur(2px)
+      filter blur(10px)
 
     &:nth-of-type(3)
       background hsl(0, 0%, 15%)
@@ -369,12 +383,12 @@ body
       width 100%
       height 250%
       position absolute
-      top 100%
+      top 110%
       left 4%
       background hsla(0, 0%, 0%, 0.5)
       transform-origin 50% 0
-      transform skewX(15deg)
-      filter blur(5px)
+      transform skewX(-5deg)
+      filter blur(10px)
 
 .light-cube
   --height calc(15 * var(--one-cm))
@@ -442,3 +456,244 @@ body
     &:nth-of-type(5)
       background url('https://images.pexels.com/photos/3707669/pexels-photo-3707669.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940')
       background-size cover
+
+.monitor
+  &--main
+    --width calc(3 * var(--one-cm))
+    --depth calc(86 * var(--one-cm))
+    --height calc(36 * var(--one-cm))
+    --z calc(106 * var(--one-cm))
+    --y calc(-43 * var(--one-cm))
+    --x calc(10 * var(--one-cm))
+    top 50%
+
+  &--portrait
+    --depth calc(34 * var(--one-cm))
+    --width calc(3 * var(--one-cm))
+    --height calc(56 * var(--one-cm))
+    --z calc(104 * var(--one-cm))
+    --x calc(20 * var(--one-cm))
+    --rotate-cuboid-z 30
+    top 8%
+
+  div
+    background var(--peripheral-one)
+
+    &:nth-of-type(3)
+    &:nth-of-type(5)
+      background var(--peripheral-four)
+    &:nth-of-type(2)
+      background var(--peripheral-three)
+
+  iframe
+    position absolute
+    height 800%
+    width 800%
+    top 50%
+    left 50%
+    transform translate(-50%, -50%) scale(0.125)
+
+  &__arm
+    --width calc(4 * var(--one-cm))
+    --depth calc(4 * var(--one-cm))
+    --height calc(30 * var(--one-cm))
+    --z calc(80 * var(--one-cm))
+    &--main
+      --x calc(6 * var(--one-cm))
+      top 65%
+    &--portrait
+      --x calc(20 * var(--one-cm))
+      --rotate-cuboid-z 30
+      top 10%
+
+    div
+      background var(--peripheral-four)
+      &:nth-of-type(3)
+      &:nth-of-type(5)
+        background var(--peripheral-four)
+      &:nth-of-type(1)
+        background var(--peripheral-one)
+
+.mac
+  --width calc(20 * var(--one-cm))
+  --height calc(5 * var(--one-cm))
+  --depth calc(20 * var(--one-cm))
+  --z calc(60 * var(--one-cm))
+  --x calc(44 * var(--one-cm))
+  top 10%
+  div
+    background var(--mac-three)
+    &:nth-of-type(1)
+      background var(--mac-one)
+    &:nth-of-type(3)
+      background var(--mac-two)
+
+.keyboard
+  --depth calc(38 * var(--one-cm))
+  --width calc(14 * var(--one-cm))
+  --height calc(2 * var(--one-cm))
+  --z calc(1 * var(--one-cm))
+
+  div
+    background var(--peripheral-two)
+
+    &:nth-of-type(1)
+      background var(--peripheral-one)
+
+  &__keys
+    --depth calc(36 * var(--one-cm))
+    --width calc(12 * var(--one-cm))
+    --height calc(4 * var(--one-cm))
+    --z calc(2 * var(--one-cm))
+    --x calc(1 * var(--one-cm))
+    --y calc(1 * var(--one-cm))
+    div
+      background hsl(0, 0%, 60%)
+
+      &:nth-of-type(5):after
+        content ''
+        position absolute
+        top 0%
+        left 0%
+        transform-origin 0% 0%
+        width calc((36 * var(--one-cm)) * 1vmin)
+        height calc((12 * var(--one-cm)) * 1vmin)
+        transform rotate(270deg) translate(-100%, 0%)
+        background url('https://assets.codepen.io/605876/keychron-keys.png?width=338&height=109&format=auto')
+        background-size cover
+
+  &__base
+    transform-style preserve-3d
+    height calc((38 * var(--one-cm)) * 1vmin)
+    width calc((14 * var(--one-cm)) * 1vmin)
+    top 50%
+    left 60%
+    position absolute
+    transform translate3d(0, -50%, calc((66 * var(--one-cm)) * 1vmin))
+
+.mousemat
+  height 260%
+  width 200%
+  background black
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%)
+
+.mouse
+  --depth calc(6 * var(--one-cm))
+  --width calc(10 * var(--one-cm))
+  --height calc(8 * var(--one-cm))
+  top -40%
+  left 20%
+
+  div
+    background var(--peripheral-three)
+
+    &:nth-of-type(1)
+      background var(--peripheral-one)
+    &:nth-of-type(2)
+    &:nth-of-type(3)
+      background var(--peripheral-four)
+    &:nth-of-type(5):after
+      content ''
+      height 25%
+      width 30%
+      background hsl(90, 80%, 50%)
+      position absolute
+      top 50%
+      left 25%
+      transform translate(-50%, -50%)
+
+.bear-canvas
+  --width calc(60 * var(--one-cm))
+  --height calc(60 * var(--one-cm))
+  --depth calc(2 * var(--one-cm))
+  --z calc(80 * var(--one-cm))
+  --x calc(168 * var(--one-cm))
+
+  div
+    background hsl(0, 0%, 95%)
+
+    &:nth-of-type(1)
+      background linear-gradient(hsla(0, 0%, 100%, 0.25), hsla(0, 0%, 100%, 0.25)), url("https://assets.codepen.io/605876/avatar.png"), hsl(0, 0%, 98%)
+      background-size 75%
+      background-position center
+      background-repeat no-repeat
+      filter grayscale(1)
+
+    &:nth-of-type(2):after
+      content ''
+      height 100%
+      width 100%
+      background hsla(0, 0%, 0%, 0.5)
+      filter blur(10px)
+      position absolute
+      top 10%
+      left -5%
+.window
+  width calc((114 * var(--one-cm)) * 1vmin)
+  background linear-gradient(40deg, transparent 20%, hsla(0, 0%, 100%, 0.5), transparent 50%), linear-gradient(40deg, transparent 50%, hsla(0, 0%, 100%, 0.25), transparent 60%), hsla(190, 80%, 90%, 0.25)
+  height calc((95 * var(--one-cm)) * 1vmin)
+  position absolute
+  transform rotateX(90deg) translate3d(calc((22 * var(--one-cm)) * 1vmin), calc((102 * var(--one-cm)) * 1vmin), calc((18 * var(--one-cm)) * 1vmin))
+  transform-origin 50% 0%
+
+  &__frame
+    &--top
+    &--middle
+    &--bottom
+      --depth calc(4 * var(--one-cm))
+      --width calc(115 * var(--one-cm))
+      --height calc(4 * var(--one-cm))
+
+      div
+        background hsl(0, 0%, 98%)
+
+        &:nth-of-type(6)
+          background hsl(0, 0%, 90%)
+
+    &--top
+      bottom 0
+
+    &--middle
+      top 60%
+
+
+    &--left
+    &--right
+      --depth calc(95 * var(--one-cm))
+      --width calc(4 * var(--one-cm))
+      --height calc(4 * var(--one-cm))
+
+      div
+        background hsl(0, 0%, 98%)
+
+        &:nth-of-type(6)
+          background hsl(0, 0%, 90%)
+
+    &--right
+      right 0
+
+.blinds
+  background 'hsla(0, 0%, 50%, %s)' % calc(var(--dark) * 0.1)
+  height 100%
+  width 100%
+  position absolute
+  top 0
+  left 0
+  transition background 0.2s
+  transform translate3d(0, 0, calc((-10 * var(--one-cm)) * 1vmin)) rotate(180deg)
+
+.blind
+  height 10%
+  width 100%
+  position absolute
+  top -5%
+  left 0
+  background hsl(30, 50%, 85%)
+  transform-origin 50% 50%
+  transition transform 0.2s
+  // Can be translated by 100% or 1%
+  // Can be rotated by -2deg or -90deg
+  transform translate(0, calc((var(--index) * (100 * var(--dark))) * 1%)) rotateX(calc((-85 + (var(--dark) * 83)) * 1deg))
