feat: check in house styling start

--- a/src/house-from-up/dev.pug
+++ b/src/house-from-up/dev.pug
@@ -49,4 +49,33 @@ mixin cuboid(className)
       +cuboid()
     +cuboid('chimney__skirt')
     +cuboid('chimney')
+    +cuboid('post post--left')
+    +cuboid('post post--right')
+    +cuboid('post post--back')
+    +cuboid('post post--front-top')
+    +cuboid('post post--front-side')
+    +cuboid('post post--top-support')
+    +cuboid('post post--top-side-support')
+    +cuboid('post post--bottom-support')
+    +cuboid('post post--bottom-side-support')
+    +cuboid('post post--stair')
+    +cuboid('post post--handrail')
+    .steps.steps--front
+      +cuboid('step')
+      +cuboid('step')
+      +cuboid('step')
+    .steps.steps--back
+      +cuboid('step')
+    +cuboid('house__front-slant')
+    +cuboid('rafter')
+    .fence.fence--front-top
+    .fence.fence--front-bottom
+    .fence.fence--side-top
+    .fence.fence--side-bottom
+    .fence.fence--handrail
+    +cuboid('pipe pipe--vertical')
+    +cuboid('pipe pipe--horizontal')
+    .window.window--side
+
+
 
