--- a/src/house-from-up/style.styl
+++ b/src/house-from-up/style.styl
@@ -27,7 +27,7 @@
   --blue-two hsl(190, 80%, 40%)
   --blue-three hsl(190, 80%, 30%)
   --windowsill hsl(0, 0%, 90%)
-  --internal hsl(180, 80%, 8%)
+  --internal hsl(180, 60%, 12%)
   --panel-shade hsla(0, 0%, 0%, 0.25)
 
 body
@@ -132,6 +132,11 @@ body
       --bg var(--orange-one)
       background linear-gradient(transparent 90%, var(--panel-shade)) 0 0 / 100% 1vmin, var(--bg)
 
+      &:nth-of-type(4)
+      &:nth-of-type(5)
+      &:nth-of-type(6)
+        display none
+
       &:nth-of-type(1)
         --bg var(--orange-three)
 
@@ -162,8 +167,10 @@ body
 
     div:nth-of-type(1)
     div:nth-of-type(2)
+    div:nth-of-type(4)
     div:nth-of-type(5)
-      background transparent
+    div:nth-of-type(6)
+      display none
 
     div:nth-of-type(3)
       $clip = polygon(0 100%, 50% 0, 100% 100%)
