--- a/src/house-from-up/dev.pug
+++ b/src/house-from-up/dev.pug
@@ -1,3 +1,18 @@
+- const BALLOON_COUNT = 50
+-
+  const random = (min, max) => {
+    min = Math.ceil(min)
+    max = Math.floor(max)
+    return Math.floor(Math.random() * (max - min + 1) + min)
+  }
+  const STRINGS = new Array(BALLOON_COUNT).fill().map(() => ({
+    len: random(15, 40),
+    rotate: random(0, 360),
+    tilt: random(0, 25),
+    hue: random(0, 359),
+    size: random(5, 15)
+  }))
+
 //- Front
 //- Back
 //- Right
@@ -76,6 +91,14 @@ mixin cuboid(className)
     +cuboid('pipe pipe--vertical')
     +cuboid('pipe pipe--horizontal')
     .window.window--side
-
-
-
+    .balloons
+      - let s = 0
+      while s < BALLOON_COUNT
+        - const { len, rotate, tilt } = STRINGS[s]
+        .balloon__string(style=`--length: ${len}; --rotate: ${rotate}; --tilt: ${tilt};`)
+        - s++
+      - let b = 0
+      while b < BALLOON_COUNT
+        - const { hue, len, rotate, tilt, size } = STRINGS[b]
+        .balloon(style=`--size: ${size}; --hue: ${hue}; --length: ${len}; --rotate: ${rotate}; --tilt: ${tilt};`)
+        - b++
